k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment

spec: 
  replicas: 1
  
  selector: 
    matchLabels:
      app: task-api
  
  template:
    metadata: 
      labels:
        app: task-api
    
    spec:
      containers:
        - name: api
          image: devops-task-api:v1
          imagePullPolicy: IfNotPresent
          
          ports: 
            - containerPort: 8000
 
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
