k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: db-deployment

spec: 
  replicas: 1

  selector:
    matchLabels: 
      app: task-db

  template: 
    metadata: 
      labels:
        app: task-db

    spec:
      volumes:
        - name: db-init-volume
          configMap:  
            name: db-init

        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc

      containers: 
        - name: db
          image: postgres:17

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: db-init-volume
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql 

            - name: db-data
              mountPath: /var/lib/postgresql/data
