k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service

spec: 
  selector:
    app: task-api 

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  
  type: ClusterIP
